# cohere-api

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  render.yaml  requirements-vercel.txt  requirements.txt  setup.cfg  setup.py  vercel-build.sh  vercel.json
.github/workflows/: cd.yml  ci.yml
app/: main.py
app/api/: models.py  routes.py
app/core/: fetchers.py  llm.py  preprocessor.py
debug/: last_fetch.html
docker/grafana/provisioning/dashboards/: api-dashboard.json  dashboard.yml
docker/prometheus/: prometheus.yml
scripts/: PRD.txt
tests/: test_api.py  test_fetchers.py  test_llm.py  test_playwright_fetcher.py  test_preprocessor.py
